--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -17,4 +17,11 @@ a {
 }
 
 
+.load-more {
+  display: block;
+  margin: 50px 0;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
 @import "modules/multiselect";
