--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -7,6 +7,7 @@ $orange : #ff9800;
 $blue :   #2196f3;
 $purple : #9c27b0;
 $red :    #f44336;
+$bloodred: #DC143C;
 $black :  #000000;
 $white :  #ffffff;
 $darkgrey: #333333;
