--- a/src/assets/scss/modules/_multiselect.scss
+++ b/src/assets/scss/modules/_multiselect.scss
@@ -13,27 +13,56 @@
 
   .multiselect-dropdown {
     width: 300px;
-    max-height: 300px;
+    height: 400px;
     display: none;
     position: absolute;
-    overflow: auto;
-    padding: 15px;
     border: solid 1px rgb(120, 120, 120);
     background: rgb(255, 255, 255);
 
     .multiselect-list {
+      height: 350px;
       list-style: none;
       margin: 0;
-      padding: 0;
+      padding: 15px;
+      overflow: auto;
 
       .selection {
-
-
-        a {
+        .link {
           margin: 0 15px 0 0;
           text-decoration: none;
           cursor: pointer;
         }
+      }
+
+      .multiselect-list-item {
+
+        .multiselect-list-item-link {
+          line-height: 1.3em;
+
+          .icon {
+            display: inline-block;
+            margin-right: 5px;
+
+            &.check-active {
+              color: $checkbox-active_color
+            }
+
+            &.check-inactive {
+              color: $checkbox-inactive_color;
+            }
+          }
+        }
+      }
+    }
+
+    .multiselect-dropdown-button {
+      height: 50px;
+
+      .btn {
+        width: 100%;
+        padding: 0;
+        border-radius: 0;
+        line-height: 50px;
       }
     }
   }
