new color no animation

--- a/src/assets/scss/helpers/_colors.scss
+++ b/src/assets/scss/helpers/_colors.scss
@@ -13,7 +13,7 @@ $white:           #ffffff;
 $darkgrey:        #333333;
 $grey:            #B4B4B4;
 $lightgrey:       #f8f5f0;
-$greyblue:        #a3a3c2;
+$greyblue:        #A0B2C4;
 $greyblue_light:  #f0f0f5;
 
 $blue-light-100:	#ffffff;
