Implement new design without bootstrap

--- a/src/assets/scss/base/_general.scss
+++ b/src/assets/scss/base/_general.scss
@@ -1,9 +1,8 @@
 /* ------------------------------------------------------------------------------------------
    GENERAL > DOCUMENT
    ------------------------------------------------------------------------------------------ */
-body {
-  margin-left: 7px;
-  padding-top: 10px;
+html, body, * {
+  box-sizing: border-box;
 }
 
 
