--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -4,6 +4,7 @@
 @import "helpers/colors";
 @import "helpers/mixins";
 @import "helpers/keyframes";
+@import "helpers/variables";
 
 
 
@@ -18,9 +19,15 @@
 /* ------------------------------------------------------------------------------------------
    MODULES
    ------------------------------------------------------------------------------------------ */
+@import "modules/grid";
 @import "modules/alert";
 @import "modules/highlighting";
 @import "modules/info-box";
 @import "modules/multiselect";
 @import "modules/tables";
 @import "modules/header-filter-form";
+@import "modules/main-header";
+@import "modules/btn";
+@import "modules/container";
+@import "modules/icon";
+@import "modules/form";
