Move search field into the header

--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -37,10 +37,11 @@ $border-radius: 3px;
 /* ------------------------------------------------------------------------------------------
    LAYOUT
    ------------------------------------------------------------------------------------------ */
- $space-tiny:    5px;
- $space-small:  10px;
- $space:        20px;
- $space-medium: 30px;
+$space-tiny:    5px;
+$space-small:  10px;
+$space:        20px;
+$space-medium: 30px;
+$space-large:  50px;
 
 
 $site-max-width: 1024px;
