--- a/src/assets/scss/modules/_tables.scss
+++ b/src/assets/scss/modules/_tables.scss
@@ -25,12 +25,24 @@
       th {
         border-top-width: 1px;
         vertical-align: top;
+
+        .link {
+          display: block;
+        }
+
+        .sub.even {
+          color: $text_light;
+        }
       }
     }
   }
 
   tbody {
     font-weight: $font-weight-light;
+
+    .sub.even {
+      color: $text_light;
+    }
   }
 
   &.table-striped {
