Improve CSS code

--- a/src/assets/scss/1-settings/_styling.scss
+++ b/src/assets/scss/1-settings/_styling.scss
@@ -1,11 +1,10 @@
+
+
+
+
 /* ------------------------------------------------------------------------------------------
-   MAIN CONTAINER BLOCK
+   GENERAL STYLING
    ------------------------------------------------------------------------------------------ */
-.main-container {
-  position: fixed;
-  top: 50px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: auto;
-}
+$border-radius: 3px;
+
+
