--- a/src/assets/scss/6-components/_btn.scss
+++ b/src/assets/scss/6-components/_btn.scss
@@ -1,5 +1,5 @@
 /* ------------------------------------------------------------------------------------------
-   BUTTON
+   BUTTON BLOCK
    ------------------------------------------------------------------------------------------ */
 .btn {
   height: $btn-height;
@@ -19,6 +19,11 @@
     color: $color-primary-dk;
   }
 
+
+
+  /* ------------------------------------------------------------------------------------------
+     MODIFIERS
+     ------------------------------------------------------------------------------------------ */
   &.btn--primary {
     background-color: $color-primary;
     color: $color-primary-contrast;
