--- a/src/assets/scss/6-components/_icon.scss
+++ b/src/assets/scss/6-components/_icon.scss
@@ -1,11 +1,16 @@
 /* ------------------------------------------------------------------------------------------
-   ICON
+   ICON BLOCK
    ------------------------------------------------------------------------------------------ */
 .icon {
   display: inline-block;
   margin-right: $space-tiny;
 
-  &.icon-right {
+
+
+  /* ------------------------------------------------------------------------------------------
+     MODIFIERS
+     ------------------------------------------------------------------------------------------ */
+  &.icon--right {
     margin-right: 0;
     margin-left: $space-tiny;
   }
