--- a/src/assets/scss/6-components/_link.scss
+++ b/src/assets/scss/6-components/_link.scss
@@ -1,3 +1,6 @@
+/* ------------------------------------------------------------------------------------------
+   LINK BLOCK
+   ------------------------------------------------------------------------------------------ */
 .link {
   color: $color-primary;
   text-decoration: none;
