--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,7 +1,8 @@
 
 @import "1-settings/colors";
-@import "1-settings/variables";
-
+@import "1-settings/sizing";
+@import "1-settings/font";
+@import "1-settings/styling";
 
 @import "2-tools/keyframes";
 @import "2-tools/mixins";
@@ -18,11 +19,11 @@
 @import "5-objects/grid";
 
 
+@import "6-components/app-name";
 @import "6-components/btn";
 @import "6-components/container";
 @import "6-components/dot";
 @import "6-components/form";
-@import "6-components/header-filter-form";
 @import "6-components/icon";
 @import "6-components/link";
 @import "6-components/main-container";
