--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -30,6 +30,7 @@
 @import "6-components/main-header";
 @import "6-components/multiselect";
 @import "6-components/tables";
+@import "6-components/upload-form";
 
 
 @import "7-trumps/text";
