--- a/src/assets/scss/6-components/_main-header.scss
+++ b/src/assets/scss/6-components/_main-header.scss
@@ -11,13 +11,6 @@
   background-color: $color-primary-lt;
   color: $color-primary-contrast;
   z-index: 999;
-
-  .file-info {
-    float: left;
-    margin: 0 $space;
-    font-size: $font-size-small;
-    line-height: $main-header-height;
-  }
 }
 
 
@@ -25,6 +18,13 @@
 /* ------------------------------------------------------------------------------------------
    ELEMENTS
    ------------------------------------------------------------------------------------------ */
+.main-header__info {
+  float: left;
+  margin: 0 $space;
+  font-size: $font-size-small;
+  line-height: $main-header-height;
+}
+
 .main-header__control-container {
     float: left;
     margin: 0 $space;
